--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "accordion-blocks",
-  "version": "1.4.1",
-  "description": "Gutenberg blocks for creating responsive accordion drop-downs.",
-  "main": "src/index.js",
-  "scripts": {
-    "start": "wp-scripts start",
-    "build": "wp-scripts build"
-  },
-  "author": "pbuchanan",
-  "license": "ISC",
-  "devDependencies": {
-    "@wordpress/scripts": "19.0.0"
-  }
+	"name": "accordion-blocks",
+	"version": "1.4.1",
+	"description": "Gutenberg blocks for creating responsive accordion drop-downs.",
+	"main": "src/index.js",
+	"scripts": {
+		"start": "wp-scripts start",
+		"build": "wp-scripts build",
+		"front": "chokidar \"./js/accordion-blocks.js\" -c \"minify ./js/accordion-blocks.js > ./js/accordion-blocks.min.js\""
+	},
+	"author": "pbuchanan",
+	"license": "ISC",
+	"devDependencies": {
+		"@wordpress/scripts": "19.0.0",
+		"classnames": "*",
+		"chokidar-cli": "^3.0.0",
+		"minify": "^9.1.0"
+	}
 }
